hyperdex.h

enum hyperdatatype
{
    /* Primitive types */
    HYPERDATATYPE_GENERIC   = 9216,
    HYPERDATATYPE_STRING    = 9217,
    HYPERDATATYPE_INT64     = 9218,
    HYPERDATATYPE_FLOAT     = 9219,

    /* List types */
    HYPERDATATYPE_LIST_GENERIC = 9280,
    HYPERDATATYPE_LIST_STRING  = 9281,
    HYPERDATATYPE_LIST_INT64   = 9282,
    HYPERDATATYPE_LIST_FLOAT   = 9283,

    /* Set types */
    HYPERDATATYPE_SET_GENERIC = 9344,
    HYPERDATATYPE_SET_STRING  = 9345,
    HYPERDATATYPE_SET_INT64   = 9346,
    HYPERDATATYPE_SET_FLOAT   = 9347,

    /* Map types */
    HYPERDATATYPE_MAP_GENERIC        = 9408,
    HYPERDATATYPE_MAP_STRING_KEYONLY = 9416,
    HYPERDATATYPE_MAP_STRING_STRING  = 9417,
    HYPERDATATYPE_MAP_STRING_INT64   = 9418,
    HYPERDATATYPE_MAP_STRING_FLOAT   = 9419,
    HYPERDATATYPE_MAP_INT64_KEYONLY  = 9424,
    HYPERDATATYPE_MAP_INT64_STRING   = 9425,
    HYPERDATATYPE_MAP_INT64_INT64    = 9426,
    HYPERDATATYPE_MAP_INT64_FLOAT    = 9427,
    HYPERDATATYPE_MAP_FLOAT_KEYONLY  = 9432,
    HYPERDATATYPE_MAP_FLOAT_STRING   = 9433,
    HYPERDATATYPE_MAP_FLOAT_INT64    = 9434,
    HYPERDATATYPE_MAP_FLOAT_FLOAT    = 9435,

    // Returned if the server acts up
    HYPERDATATYPE_GARBAGE   = 9727
};
/* Predicate occupies [9728, 9856) */
enum hyperpredicate
{
    HYPERPREDICATE_FAIL          = 9728,
    HYPERPREDICATE_EQUALS        = 9729,
    HYPERPREDICATE_LESS_EQUAL    = 9730,
    HYPERPREDICATE_GREATER_EQUAL = 9731
};