bindings/python/hyperdex/client.pyx

# Copyright (c) 2011-2014, Cornell University
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
#     * Redistributions of source code must retain the above copyright notice,
#       this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#     * Neither the name of HyperDex nor the names of its contributors may be
#       used to endorse or promote products derived from this software without
#       specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

try: import simplejson as json
except ImportError: import json
import datetime
import calendar
import time

from cpython cimport bool


cdef extern from "stdint.h":

    ctypedef short int int16_t
    ctypedef unsigned short int uint16_t
    ctypedef int int32_t
    ctypedef unsigned int uint32_t
    ctypedef long int int64_t
    ctypedef unsigned long int uint64_t
    ctypedef long unsigned int size_t

cdef extern from "stdlib.h":

    void* malloc(size_t size)
    void free(void* ptr)


cdef extern from "hyperdex.h":

    cdef enum hyperdatatype:
        HYPERDATATYPE_GENERIC            = 9216
        HYPERDATATYPE_STRING             = 9217
        HYPERDATATYPE_INT64              = 9218
        HYPERDATATYPE_FLOAT              = 9219
        HYPERDATATYPE_DOCUMENT           = 9223
        HYPERDATATYPE_LIST_GENERIC       = 9280
        HYPERDATATYPE_LIST_STRING        = 9281
        HYPERDATATYPE_LIST_INT64         = 9282
        HYPERDATATYPE_LIST_FLOAT         = 9283
        HYPERDATATYPE_SET_GENERIC        = 9344
        HYPERDATATYPE_SET_STRING         = 9345
        HYPERDATATYPE_SET_INT64          = 9346
        HYPERDATATYPE_SET_FLOAT          = 9347
        HYPERDATATYPE_MAP_GENERIC        = 9408
        HYPERDATATYPE_MAP_STRING_KEYONLY = 9416
        HYPERDATATYPE_MAP_STRING_STRING  = 9417
        HYPERDATATYPE_MAP_STRING_INT64   = 9418
        HYPERDATATYPE_MAP_STRING_FLOAT   = 9419
        HYPERDATATYPE_MAP_INT64_KEYONLY  = 9424
        HYPERDATATYPE_MAP_INT64_STRING   = 9425
        HYPERDATATYPE_MAP_INT64_INT64    = 9426
        HYPERDATATYPE_MAP_INT64_FLOAT    = 9427
        HYPERDATATYPE_MAP_FLOAT_KEYONLY  = 9432
        HYPERDATATYPE_MAP_FLOAT_STRING   = 9433
        HYPERDATATYPE_MAP_FLOAT_INT64    = 9434
        HYPERDATATYPE_MAP_FLOAT_FLOAT    = 9435
        HYPERDATATYPE_TIMESTAMP_GENERIC  = 9472
        HYPERDATATYPE_TIMESTAMP_SECOND   = 9473
        HYPERDATATYPE_TIMESTAMP_MINUTE   = 9474
        HYPERDATATYPE_TIMESTAMP_HOUR     = 9475
        HYPERDATATYPE_TIMESTAMP_DAY      = 9476
        HYPERDATATYPE_TIMESTAMP_WEEK     = 9477
        HYPERDATATYPE_TIMESTAMP_MONTH    = 9478
        HYPERDATATYPE_MACAROON_SECRET    = 9664
        HYPERDATATYPE_GARBAGE            = 9727

    cdef enum hyperpredicate:
        HYPERPREDICATE_FAIL          = 9728
        HYPERPREDICATE_EQUALS        = 9729
        HYPERPREDICATE_LESS_THAN     = 9738
        HYPERPREDICATE_LESS_EQUAL    = 9730
        HYPERPREDICATE_GREATER_EQUAL = 9731
        HYPERPREDICATE_GREATER_THAN  = 9739
        HYPERPREDICATE_REGEX         = 9733
        HYPERPREDICATE_LENGTH_EQUALS        = 9734
        HYPERPREDICATE_LENGTH_LESS_EQUAL    = 9735
        HYPERPREDICATE_LENGTH_GREATER_EQUAL = 9736
        HYPERPREDICATE_CONTAINS      = 9737


cdef extern from "macaroons.h":

    cdef struct macaroon


cdef extern from "hyperdex/client.h":

    cdef struct hyperdex_client

    cdef struct hyperdex_client_microtransaction

    cdef struct hyperdex_client_attribute:
        const char* attr
        const char* value
        size_t value_sz
        hyperdatatype datatype

    cdef struct hyperdex_client_map_attribute:
        const char* attr
        const char* map_key
        size_t map_key_sz
        hyperdatatype map_key_datatype
        const char* value
        size_t value_sz
        hyperdatatype value_datatype

    cdef struct hyperdex_client_attribute_check:
        const char* attr
        const char* value
        size_t value_sz
        hyperdatatype datatype
        hyperpredicate predicate

    cdef enum hyperdex_client_returncode:
        HYPERDEX_CLIENT_SUCCESS      = 8448
        HYPERDEX_CLIENT_NOTFOUND     = 8449
        HYPERDEX_CLIENT_SEARCHDONE   = 8450
        HYPERDEX_CLIENT_CMPFAIL      = 8451
        HYPERDEX_CLIENT_READONLY     = 8452
        HYPERDEX_CLIENT_UNKNOWNSPACE = 8512
        HYPERDEX_CLIENT_COORDFAIL    = 8513
        HYPERDEX_CLIENT_SERVERERROR  = 8514
        HYPERDEX_CLIENT_POLLFAILED   = 8515
        HYPERDEX_CLIENT_OVERFLOW     = 8516
        HYPERDEX_CLIENT_RECONFIGURE  = 8517
        HYPERDEX_CLIENT_TIMEOUT      = 8519
        HYPERDEX_CLIENT_UNKNOWNATTR  = 8520
        HYPERDEX_CLIENT_DUPEATTR     = 8521
        HYPERDEX_CLIENT_NONEPENDING  = 8523
        HYPERDEX_CLIENT_DONTUSEKEY   = 8524
        HYPERDEX_CLIENT_WRONGTYPE    = 8525
        HYPERDEX_CLIENT_NOMEM        = 8526
        HYPERDEX_CLIENT_INTERRUPTED  = 8530
        HYPERDEX_CLIENT_CLUSTER_JUMP = 8531
        HYPERDEX_CLIENT_INTERNAL     = 8573
        HYPERDEX_CLIENT_EXCEPTION    = 8574
        HYPERDEX_CLIENT_GARBAGE      = 8575
